@@ -9,29 +9,26 @@
 package de.rub.nds.tlsscanner.core.probe.requirements;
 
 import de.rub.nds.scanner.core.constants.TestResult;
+import de.rub.nds.scanner.core.constants.TestResults;
 import de.rub.nds.scanner.core.probe.requirements.PrimitiveRequirement;
 import de.rub.nds.scanner.core.probe.requirements.Requirement;
 import de.rub.nds.tlsscanner.core.constants.TlsAnalyzedProperty;
 import de.rub.nds.tlsscanner.core.report.TlsScanReport;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-/** Represents a {@link Requirement} for required {@link TlsAnalyzedProperty} properties. */
+/** Represents a {@link Requirement} for evaluated {@link TlsAnalyzedProperty} properties. */
 public class PropertyRequirement<R extends TlsScanReport<R>>
         extends PrimitiveRequirement<R, TlsAnalyzedProperty> {
 
-    private final TestResult requiredTestResult;
-
-    public PropertyRequirement(
-            TestResult requiredTestResult, List<TlsAnalyzedProperty> properties) {
+    public PropertyRequirement(List<TlsAnalyzedProperty> properties) {
         super(properties);
-        this.requiredTestResult = requiredTestResult;
     }
 
-    public PropertyRequirement(TestResult requiredTestResult, TlsAnalyzedProperty... properties) {
-        super(List.of(properties));
-        this.requiredTestResult = requiredTestResult;
+    public PropertyRequirement(TlsAnalyzedProperty... properties) {
+        super(Arrays.asList(properties));
     }
 
     @Override
@@ -42,22 +39,17 @@ public class PropertyRequirement<R extends TlsScanReport<R>>
         Map<String, TestResult> propertyMap = report.getResultMap();
         for (TlsAnalyzedProperty property : parameters) {
             if (!propertyMap.containsKey(property.toString())
-                    || propertyMap.get(property.toString()) != requiredTestResult) {
+                    || propertyMap.get(property.toString()) == TestResults.UNASSIGNED_ERROR) {
                 return false;
             }
         }
         return true;
     }
 
-    public TestResult getRequiredTestResult() {
-        return requiredTestResult;
-    }
-
     @Override
     public String toString() {
         return String.format(
-                "PropertyRequirement[%s: %s]",
-                requiredTestResult,
+                "PropertyRequirement[%s]",
                 parameters.stream().map(Object::toString).collect(Collectors.joining(" ")));
     }
 }
